<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="?attr/colorBackgroundFloating"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/titlemonedapr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:scaleType="centerInside" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/title_mp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/valorMoneda"
                android:textSize="30sp" />
        </LinearLayout>-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/image_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fadeScrollbars="false"
                android:paddingTop="50dp">

                <ImageView
                    android:id="@+id/fons_preguntac"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_gravity="top"
                    android:background="@drawable/mostra_preg"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btn_cara2"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="top"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/fons_buttons2"
                    android:text="@string/cara"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/bacabar_creu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/fons_buttons2"
                    android:text="@string/dbtnacabar"
                    android:textColor="@android:color/background_dark"
                    android:textSize="40sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btn_creu2"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/fons_buttons2"
                    android:text="@string/creu"
                    android:textColor="@android:color/background_dark"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/stc_cara"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:layout_marginTop="30dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textColor="@android:color/background_dark"
                    android:textColorLink="@android:color/background_dark"
                    android:textSize="28sp"
                    android:visibility="invisible" />

            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:id="@+id/btn_acabar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/fons_buttons2"
            android:text="@string/dbtnacabar"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            android:visibility="invisible" />
    </LinearLayout>
</LinearLayout>